# prompt-engineer

./: .coverage  .gitignore  DESIGN.md  SkillOptimizer.spec  analyze_judge.py  build_desktop.ps1  desktop.py  imports.txt  main.py  pyproject.toml  pytest.ini  requirements.txt  scratch_test_2.py  scratch_uvicorn_test.py  test_discoverer.py
.agents/: gsd-file-manifest.json  gsd-install-state.json
.opencode/: ep.json  gsd-file-manifest.json  gsd-install-state.json  opencode.json  rm.json  ss.json  vw.json
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.pytest_tmp/: test_corrupted_json_loadingcurrent  test_delete_jobcurrent  test_experience_store_lifecyclcurrent  test_experience_store_query_sicurrent  test_experience_store_strategycurrent  test_gate_accepts_and_persistscurrent  test_gate_rejects_candidatecurrent  test_golden_empty_fail_closedcurrent  test_golden_present_drift_meascurrent  test_golden_set_load_malformedcurrent  test_golden_set_load_missing_fcurrent  test_golden_set_parse_handles_current  test_golden_set_parse_save_roucurrent  test_init_storecurrent  test_load_all_jobscurrent  test_save_and_load_jobcurrent  test_teleprompt_optimizer_typecurrent  test_teleprompt_quality_metriccurrent
_bmad/: config.toml  config.user.toml
frontend/: index.html  package-lock.json  package.json  vitest.config.js
scratch/: scratch_run_drift.py  scratch_test.py  scratch_test_3.py  scratch_verify_nocache.py
scripts/: SkillOptimizer.spec  baseline_fase2.py  compile_dspy.py  controlled_experiment_d.py  desktop.py  generate_probes_fase1.py  (+3 more)
(+696 files in other folders)
