[project]
name = "skill-optimizer"
version = "0.4.0"
description = "Otimizador de Skills para Agentes de IA via MCTS + RL"
requires-python = ">=3.12"

[tool.ruff]
target-version = "py312"
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
]

[tool.ruff.lint.isort]
known-first-party = ["src", "tests", "scripts", "scratch"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.mypy]
python_version = "3.12"
warn_return_any = false
warn_unused_configs = true
ignore_missing_imports = true
disallow_untyped_defs = false
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = [
    "dspy.*",
    "dspy",
    "liteLLM",
    "litellm.*",
    "textstat.*",
    "webview.*",
    "pywebview.*",
    "sentence_transformers.*",
    "torch.*",
    "slowapi.*",
    "sse_starlette.*",
    "loguru.*",
    "dotenv.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
addopts = "--tb=short -p no:cacheprovider --basetemp=.pytest_tmp"